# remembrancer_pi

./: CMakeLists.txt  LICENSE  README.md  remembrancer.fbp
src/: Remembrancer.cbp  Remembrancer.layout  alertdialog.cpp  alertdialog.h  dialogDefinitions.cpp  dialogDefinitions.h  icons.cpp  icons.h  icons.sh  propertydialog.cpp  propertydialog.h  remembrancer_pi.cpp  remembrancer_pi.h
